<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard.ForgetPasswordActivity">

    <ImageView
        android:id="@+id/forget_back_btn"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:src="@drawable/ic_back_arrow"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@drawable/custom_round_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:tint="@color/app_white" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_black"
        android:text="@string/forget_password"
        android:textAllCaps="true"
        android:layout_margin="@dimen/_15sdp"
        android:textSize="@dimen/_22sdp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_back_btn" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:textSize="@dimen/_12sdp"
        android:text="@string/forget_password_desc"
        android:textColor="#181A22"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationViewForget"
        app:layout_constraintVertical_bias="0.05" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationViewForget"
        android:layout_width="@dimen/_190sdp"
        android:layout_height="@dimen/_190sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/forget" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forget_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:hint="@string/email_address"
        app:layout_constraintEnd_toEndOf="@+id/desc"
        app:layout_constraintStart_toStartOf="@+id/desc"
        app:layout_constraintTop_toBottomOf="@+id/desc">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:background="@drawable/custom_button_design"
        android:id="@+id/reset_pass_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:backgroundTint="@color/app_heading"
        android:padding="20dp"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="@dimen/_16sdp"
        android:enabled="false"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@+id/forget_email"
        app:layout_constraintStart_toStartOf="@+id/forget_email"
        app:layout_constraintTop_toBottomOf="@+id/forget_email" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:text="@string/forget_password_extra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_pass_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>